# cookiecutter-uv

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  README.md  pyproject.toml
